<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

     <LinearLayout
         android:id="@+id/contentHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:minHeight="60dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:paddingStart="@dimen/padding_start"
         android:paddingEnd="@dimen/padding_end"
         android:orientation="vertical"
         android:background="@drawable/bg_boletim_header">

          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/tvTerritory"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/territorio_000372"
              android:textColor="@color/colorWhite"
              android:textSize="16sp"
              app:fontFamily="@font/roboto_bold" />

          <androidx.appcompat.widget.AppCompatTextView
              android:visibility="gone"
              android:id="@+id/tvFilters"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/filtros_canal_categoria_cliente"
              android:textColor="@color/colorWhite"
              android:textSize="12sp"
              app:fontFamily="@font/roboto_regular" />

     </LinearLayout>

     <com.unilever.julia.components.JuliaFiltroTabs
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="@dimen/filtro_tabs_height"
         app:julFilTabLeftText="@string/niv"
         app:julFilTabRightText="@string/ton"/>

     <include layout="@layout/boletim_card_chat_middle"/>

     <include layout="@layout/boletim_card_chat_buttons"/>

</LinearLayout>