<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorChatBg"
    android:paddingTop="29dp"
    android:paddingBottom="26dp"
    android:paddingStart="@dimen/margin_start_24dp"
    android:paddingEnd="@dimen/margin_end_24dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/filial_bh_001"
        android:textColor="@color/colorTextGray1"
        android:textSize="16sp"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintEnd_toStartOf="@+id/tvTarget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTarget" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_score"
        android:gravity="center"
        android:minWidth="41dp"
        android:paddingStart="5dp"
        android:paddingTop="2dp"
        android:paddingEnd="5dp"
        android:paddingBottom="2dp"
        android:text="@string/meta_70"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/fernando_sousa"
        android:textColor="@color/colorTextGray1"
        android:textSize="14sp"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toStartOf="@+id/tvScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvScore" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_score"
        android:gravity="center"
        android:minWidth="41dp"
        android:paddingStart="5dp"
        android:paddingTop="2dp"
        android:paddingEnd="5dp"
        android:paddingBottom="2dp"
        android:text="@string/score_75_24"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTarget" />

    <com.unilever.julia.components.GridViewExpandableHeight
        android:id="@+id/gridItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:numColumns="2"
        android:stretchMode="columnWidth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        tools:listitem="@layout/ipv_item_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>