<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <View
            android:id="@+id/arrowLeft"
            android:layout_width="3dp"
            android:layout_height="0dp"
            android:background="@color/colorBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLabel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/cordenador"
            android:textColor="@color/colorTextGray2"
            android:textSize="12sp"
            app:fontFamily="@font/roboto_bold"
            app:layout_constraintStart_toEndOf="@+id/arrowLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDistrictScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@drawable/bg_score"
            android:gravity="center"
            android:minWidth="41dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/_99porcent"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toBottomOf="@+id/tvLabel1"
            app:layout_constraintStart_toEndOf="@+id/tvLabel1"
            app:layout_constraintTop_toTopOf="@+id/tvLabel1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCoordinator"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/jo_o_paulo_cardoso_neiva"
            android:textColor="@color/colorTextGray1"
            android:textSize="16sp"
            app:fontFamily="@font/roboto_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvLabel1"
            app:layout_constraintTop_toBottomOf="@+id/tvDistrictScore" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/distrito"
            android:textColor="@color/colorTextGray1"
            android:textSize="12sp"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintStart_toStartOf="@+id/tvCoordinator"
            app:layout_constraintTop_toBottomOf="@+id/tvCoordinator" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDistrictName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/distrito_559"
            android:textColor="@color/colorTextGray1"
            android:textSize="12sp"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintStart_toEndOf="@+id/tvLabel2"
            app:layout_constraintTop_toTopOf="@+id/tvLabel2" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLabel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/vendedor"
            android:textColor="@color/colorTextGray2"
            android:textSize="12sp"
            app:fontFamily="@font/roboto_bold"
            app:layout_constraintStart_toStartOf="@+id/tvLabel2"
            app:layout_constraintTop_toBottomOf="@+id/tvLabel2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvVendorScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@drawable/bg_score"
            android:gravity="center"
            android:minWidth="41dp"
            android:paddingStart="5dp"
            android:paddingTop="2dp"
            android:paddingEnd="5dp"
            android:paddingBottom="2dp"
            android:text="@string/_99porcent"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toBottomOf="@+id/tvLabel3"
            app:layout_constraintStart_toEndOf="@+id/tvLabel3"
            app:layout_constraintTop_toTopOf="@+id/tvLabel3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvVendorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/jo_o_paulo_cardoso_neiva"
            android:textColor="@color/colorTextGray1"
            android:textSize="16sp"
            app:fontFamily="@font/roboto_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvLabel3"
            app:layout_constraintTop_toBottomOf="@+id/tvVendorScore" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>